Changelog
=========

1.1 (unreleased)
----------------

- Updated classifiers list and info for package [macagua]
- Added Spanish translation [macagua]

1.0 (2012-06-13)
----------------
Stable release

0.3 (unreleased)
----------------

- Replace jq with $ (Plone 4.0b2 and above) [davilima6]
- Depend on plone.app.registry in setup.py
- Only show wasthisuseful viewlet in views marked with IViewView
- Added Dutch translation
- Added pt-br translation [davilima6]
- Minor template/css changes in add this viewlet

0.2 (2011-11-15)
----------------

- Add permission `wasthisuseful: Manage ratings` for controlpanel
- Allow to disable ratings for folders (and the children in them)
- Make settings on folder take precedende over enabled types

0.1dvldev (2011-11-04)
----------------------

- Initial release