@@ -1,38 +1,49 @@
-from zope.annotation.interfaces import IAnnotations
-from zope.component import getUtility
+from collective.wasthisuseful import wasthisusefulMessageFactory as _
+from collective.wasthisuseful.config import STORAGE_KEY, SETTINGS_KEY,\
+    CHILDREN_ENABLED, ITEM_ENABLED
+from collective.wasthisuseful.interfaces import IWasThisUsefulSettings
 from plone.registry.interfaces import IRegistry
 from plone.stringinterp import _ as PloneStringInterpMessageFactory
 from plone.stringinterp.adapters import BaseSubstitution
-
-from collective.wasthisuseful import wasthisusefulMessageFactory as _
-from collective.wasthisuseful.config import KEY_USEFUL, KEY_COMMENT,\
-                                  STORAGE_KEY, SETTINGS_KEY, CHILDREN_ENABLED,\
-                                  ITEM_ENABLED
-from collective.wasthisuseful.interfaces import IWasThisUsefulSettings
+from zope.annotation.interfaces import IAnnotations
+from zope.component import getUtility
 
 
 class usefulnessRatingCommentSubstitution(BaseSubstitution):
+    """ Subsitution for the commenter's comment """
     category = PloneStringInterpMessageFactory(u'All Content')
     description = _(u'label_comment', default=u'Comment')
 
     def safe_call(self):
         manager = UsefulnessManager(self.context)
-        last_vote_comment = manager.getVotes()[-1].get(KEY_COMMENT)
+        last_vote_comment = manager.getLatestVote().get('comment')
         return last_vote_comment
 
 
 class usefulnessRatingValueSubstitution(BaseSubstitution):
+    """ Subsitution for the commenter's vote """
     category = PloneStringInterpMessageFactory(u'All Content')
     description = _(u'label_value', default=u'Rating')
 
     def safe_call(self):
         manager = UsefulnessManager(self.context)
-        last_vote_value = manager.getVotes()[-1].get(KEY_USEFUL)
+        last_vote_value = manager.getLatestVote().get('useful')
         if last_vote_value:
             value = 'Yes'
         else:
             value = 'No'
         return value
+
+
+class usefulnessRatingEmailSubstitution(BaseSubstitution):
+    """ Subsitution for the commenter's e-mail """
+    category = PloneStringInterpMessageFactory(u'All Content')
+    description = _(u'label_email', default=u'E-mail')
+
+    def safe_call(self):
+        manager = UsefulnessManager(self.context)
+        last_vote_email = manager.getLatestVote().get('email')
+        return last_vote_email
 
 
 class UsefulnessManager(object):
@@ -48,6 +59,19 @@ class UsefulnessManager(object):
     def setVotes(self, votes):
         IAnnotations(self.context)[STORAGE_KEY] = votes
 
+    def addVote(self, vote):
+        """ Add the vote """
+        votes = self.getVotes()
+        votes.append(vote)
+        self.setVotes(votes)
+
+    def getLatestVote(self):
+        """ Get the latest vote """
+        votes = self.getVotes()
+        if votes:
+            return votes[-1]
+        return {}
+
 
 class UsefulnessSettingsManager(object):
     """See interfaces.py, IUsefulnessSettingsManager
@@ -58,11 +82,11 @@ class UsefulnessSettingsManager(object):
     def __init__(self, context):
         self.context = context
 
-    def getSettings(self):
-        return IAnnotations(self.context).get(SETTINGS_KEY, {})
-
-    def getParentSettings(self):
-        return IAnnotations(self.context.aq_parent).get(SETTINGS_KEY, {})
+    def getSettings(self, parent=False):
+        context = self.context
+        if parent:
+            context = context.aq_parent
+        return IAnnotations(context).get(SETTINGS_KEY, {})
 
     def setSettings(self, settings):
         IAnnotations(self.context)[SETTINGS_KEY] = settings
@@ -128,7 +152,7 @@ class UsefulnessSettingsManager(object):
         if settings and ITEM_ENABLED in settings:
             value = settings[ITEM_ENABLED]
         else:
-            parent_settings = self.getParentSettings()
+            parent_settings = self.getSettings(parent=True)
             if parent_settings:
                 value = parent_settings.get(CHILDREN_ENABLED, None)
             else:
