@@ -8,37 +8,18 @@
             </tal:label>
 
             <div class="javascript-only">
-                <a href="#" i18n:attributes="title" title="Yes, this information was useful." class="up"/>
-                <a href="#" i18n:attributes="title" title="No, this information was not useful." class="down"/>
+                <a href="#" i18n:attributes="title" title="Yes, this information was useful." class="thumbs up"/>
+                <a href="#" i18n:attributes="title" title="No, this information was not useful." class="thumbs down"/>
             </div>
 
-            <form name="usefulness" tal:attributes="action string:${context/absolute_url}/@@usefulness-form;" method="POST" id="usefulness-form">
-                <div class="field">
-                    <input type="radio" id="yes" name="useful" value="1"/>
-                    <label for="yes" i18n:domain="plone" i18n:translate="">Yes, this information was useful.</label>
-                    <input type="radio" id="no" name="useful" value="0"/>
-                    <label for="no" i18n:domain="plone" i18n:translate="">No, this information was not useful.</label>
-                </div>
 
-                <div class="field comments">
-                    <label for="form-comment" i18n:translate="label_why_noscript">Can you explain why it was not useful?
-                    </label><br/>
-                    <textarea id="form-comment" type="text" rows="3" cols="25" name="comment"></textarea>
-                </div>
-
-                <input type="submit" name="Submit" value="Submit" i18n:domain="plone" i18n:attributes="value"/>
-                <span tal:replace="structure context/@@authenticator/authenticator"/>
-            </form>
-            <div class="visualClear"></div>
+            <metal:block tal:define='view view/get_not_useful_form'>
+                <metal:block use-macro="view/@@ploneform-macros/titlelessform" />
+            </metal:block>
+            <metal:block tal:define='view view/get_useful_form'>
+                <metal:block use-macro="view/@@ploneform-macros/titlelessform" />
+            </metal:block>
         </div>
-        
-        <div id="why-not-useful">
-            <label for="div-comment" i18n:translate="label_why">Can you explain why it was not useful?</label>
-            <textarea id="div-comment" name="comment" rows="3" cols="25" ></textarea>
-            <input id="div-submit" type="submit" value="Submit" i18n:domain="plone" i18n:attributes="value"/>
-        </div>
-
-        <div class="visualClear"></div>
     </div>
 
 </tal:defineEnabled>
